Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-06-24 (SVN):
    * cl_input.c: Allow KeyUp() for in_crouch and in_infoplaque even if
      key_dest!=key_game so that they don't get stuck.

2012-06-24 (SVN):
    * gl_vidnt.c, vid_mgl4.c, vid_win.c: Make the keypad send separate
      key event, but only in-game. (ported in_sdl.c changes to windows.)
    * in_sdl.c: Minor cleanup.

2012-06-21 (SVN):
    * utils, Q_getwd: Added trailing_dirsep parameter to the function
      and appended the trailing directory separator character only if
      requested so. Made all its callers except for lmp2pcx to request
      a trailing directory separator.

2012-06-21 (SVN):
    * updated the ReleaseNotes file.
    * updated version date stamp to 2012-06-21.

2012-06-21 (SVN):
    * Make the keypad send separate key event, but only in-game. (Only
      for the SDL port for now.)

2012-06-20 (SVN):
    * utils/texutils/lmp2pcx/lmp2pcx.c: Don't pass "." to Q_FindFirst()
      as the current directory, pass the value returned by Q_getwd(),
      instead. Also use DIR_SEPARATOR_CHAR when building file names.

2012-06-20 (SVN):
    * quakefs.c, quakefs.h: Removed fs_filepath global.
    * midi_mac.c (MIDI_Play): Now that fs_filepath is no more, changed
      it to always extract the midi file.

2012-06-20 (SVN):
    * debuglog.c: Use DIR_SEPARATOR_STR.

2012-06-20 (SVN):
    * Added RISCOS defines to arch_def.h and net_sys.h, thanks to Chris
      Gransden. Added Chris Gransden under AUTHORS:contributors:coding.

2012-06-20 (SVN):
    * filenames.h: Added new macro DIR_SEPARATOR_STR, which is simply a
      string version of DIR_SEPARATOR_CHAR.

2012-06-20 (SVN):
    * utils/util_io.c (Q_getwd, PLATFORM_AMIGA): Don't return PROGDIR:

2012-06-20 (SVN):
    * sys_amiga.c (Sys_CopyFile): Restore the copied file's timestamp.

2012-06-19 (SVN):
    * h2patch.c: Use DIR_SEPARATOR_CHAR from filenames.h when building
      file names.

2012-06-19 (SVN):