@@ -153,14 +153,6 @@ ClearAllStates
 */
 static void ClearAllStates (void)
 {
-	int		i;
-	
-// send an up event for each key, to make sure the server clears them all
-	for (i = 0; i < 256; i++)
-	{
-		Key_Event (i, false);
-	}
-
 	Key_ClearStates ();
 	IN_ClearStates ();
 }
